@@ -113,3 +113,4 @@ Makefile.in
 
 # Local library dependencies specific files
 /libcerror
+/libcstring
