@@ -1,0 +1,60 @@
+Name: libfdatetime
+Version: @VERSION@
+Release: 1
+Summary: Library to support various date and time formats that are used in file formats
+Group: System Environment/Libraries
+License: LGPL
+Source: %{name}-%{version}.tar.gz
+URL: http://code.google.com/p/libfdatetime/
+BuildRoot: %{_tmppath}/%{name}-%{version}-%{release}-root-%(%{__id_u} -n)
+@libfdatetime_spec_requires@ @ax_libcerror_spec_requires@ @ax_libcstring_spec_requires@
+@libfdatetime_spec_build_requires@ @ax_libcerror_spec_build_requires@ @ax_libcstring_spec_build_requires@
+
+%description
+libfdatetime is a library to support various date and time formats that are used in file formats
+
+%package devel
+Summary: Header files and libraries for developing applications for libfdatetime
+Group: Development/Libraries
+Requires: libfdatetime = %{version}-%{release}
+
+%description devel
+Header files and libraries for developing applications for libfdatetime.
+
+%prep
+%setup -q
+
+%build
+%configure --prefix=/usr --libdir=%{_libdir} --mandir=%{_mandir}
+make %{?_smp_mflags}
+
+%install
+rm -rf ${RPM_BUILD_ROOT}
+make DESTDIR=${RPM_BUILD_ROOT} install
+
+%clean
+rm -rf ${RPM_BUILD_ROOT}
+
+%post -p /sbin/ldconfig
+
+%postun -p /sbin/ldconfig
+
+%files
+%defattr(644,root,root,755)
+%doc AUTHORS COPYING NEWS README
+%attr(755,root,root) %{_libdir}/*.so.*
+
+%files devel
+%defattr(644,root,root,755)
+%doc AUTHORS COPYING NEWS README README.dll README.macosx README.mingw README.static ChangeLog
+%{_libdir}/*.a
+%{_libdir}/*.la
+%{_libdir}/*.so
+%{_libdir}/pkgconfig/libfdatetime.pc
+%{_includedir}/*
+%{_mandir}/man3/*
+
+%changelog
+* @SPEC_DATE@ Joachim Metz <joachim.metz@gmail.com> @VERSION@-1
+- Auto-generated
+
