@@ -183,7 +183,7 @@ None
 .Sh NOTES
 .Sh BUGS
 Please report bugs of any kind to <joachim.metz@gmail.com> or on the project website:
-http://code.google.com/p/libflibs/
+http://code.google.com/p/libfdatetime/
 .Sh AUTHOR
 These man pages were written by Joachim Metz.
 .Sh COPYRIGHT
